fix permissions, update index

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-
+    <input type="button" value="Point" id="btn-point"></input>
+    <input type="button" value="Line" id="btn-line"></input>
+    <input type="button" value="Circle" id="btn-circle"></input>
   </header>
-  <div role="main">
-
+  <div role="main" id="canvas">
+    
   </div>
   <footer>
 
