add perpedicular line button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <header>
     <input type="button" value="Point" id="btn-point"></input>
     <input type="button" value="Line" id="btn-line"></input>
+    <input type="button" value="Perpendicular line" id="btn-line-perpendicular"></input>
     <input type="button" value="Circle" id="btn-circle"></input>
   </header>
   <div role="main" id="canvas">
