--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <input type="button" value="Point" id="btn-point"></input>
     <input type="button" value="Line" id="btn-line"></input>
     <input type="button" value="Perpendicular line" id="btn-line-perpendicular"></input>
+    <input type="button" value="Parallel line" id="btn-line-parallel"></input>
     <input type="button" value="Circle" id="btn-circle"></input>
   </header>
   <div role="main" id="canvas">
